--- a/Server/package.json
+++ b/Server/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "sharp": "^0.32.6",
     "stripe": "^13.8.0",
     "validator": "^13.11.0",
